// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/nebulas/box renders a <Box /> 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Box-sc-1qxknk3-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;margin:20px;padding:32px;background-color:",
          [Function],
          ";box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);",
        ],
      },
      "displayName": "Box",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Box-sc-1qxknk3-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`components/nebulas/box renders a black <Box /> 1`] = `
<StyledComponent
  color="#000"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Box-sc-1qxknk3-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;margin:20px;padding:32px;background-color:",
          [Function],
          ";box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24);",
        ],
      },
      "displayName": "Box",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Box-sc-1qxknk3-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
